Closed Bug 1964406 Opened 6 months ago Closed 6 months ago

Multiple running flatpak instances (profiles) cause content process to crash

Categories

(Toolkit :: Crash Reporting, defect)

Firefox 139
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox138 --- unaffected
firefox139 + fixed
firefox140 + fixed

People

(Reporter: ke5trel, Assigned: gsvelto)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Install latest flatpak Nightly (unofficial) on Ubuntu 25.04:
    flatpak install https://gitlab.com/projects261/firefox-nightly-flatpak/-/raw/main/firefox-nightly.flatpakref
  2. Launch two instances with separate profiles:
    flatpak run org.mozilla.FirefoxNightly -P

Alternatively with latest flatpak Beta:

flatpak remote-add --if-not-exists flathub-beta https://flathub.org/beta-repo/flathub-beta.flatpakrepo
flatpak install org.mozilla.firefox/x86_64/beta
flatpak run org.mozilla.firefox/x86_64/beta -P

Only first instance works, content processes always crash in second instance.

Terminal error:
[Parent 2, IPC I/O Parent] WARNING: process 48 exited on signal 11: file /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/process_watcher_posix_sigchld.cc:132

Regression window between 2025-04-18 and 2025-04-19.

Likely regressed by Bug 1620998.

No longer blocks: oop-crashreporter

:gsvelto, since you are the author of the regressor, bug 1620998, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(gsvelto)

Could you please get a stack trace of a crashing content process? I don't understand why this would work differently on Flatpak so I need a hint of what's going wrong.

Severity: -- → S2
Flags: needinfo?(gsvelto) → needinfo?(ke5trel)

The bug is marked as tracked for firefox139 (beta) and tracked for firefox140 (nightly). However, the bug still isn't assigned.

:gcp, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(gpascutto)
Assignee: nobody → gsvelto
Flags: needinfo?(gpascutto)

It works after restarting from inside the browser (type "restart" in the address bar and click "Restart Nightly").

It works when running from inside the flatpak shell so gdb cannot be used to stack trace and there is nothing listed in about:crashes.

flatpak run --command=sh org.mozilla.FirefoxNightly
/app/bin/firefox-nightly
Flags: needinfo?(ke5trel)

This is the final week of beta for Fx139, with only 2 beta builds left
:gsvelto, any concerns with a fix for this week?

Flags: needinfo?(gsvelto)

I still don't know what the problem is but I have a hunch. I'll write a tentative patch and we'll see if it fixes the issue. In the meantime I'll try to repo locally but analyzing Flatpak issues always takes a while.

Flags: needinfo?(gsvelto)
Status: NEW → ASSIGNED

Setting the leave-open flag since I'm not sure if this patch will fix the issue. We'll have to verify that before we close the bug.

Keywords: leave-open
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5fc9bc094fd0 Prevent child processes from crashing if the crash helper wasn't launched r=afranchuk

Fixed for me with the latest flatpak Nightly 140.0a1 (2025-05-14).

Thank you for confirming the fix. I'll file a follow-up to investigate why the crash helper isn't starting properly when using multiple instances.

Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch

The patch landed in nightly and beta is affected.
:gsvelto, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(gsvelto)
Attachment #9488058 - Flags: approval-mozilla-beta?

firefox-beta Uplift Approval Request

  • User impact if declined: Multiple sessions of Firefox launched using the same version crash
  • Code covered by automated testing: no
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: no
  • Risk associated with taking this patch: low
  • Explanation of risk level: This is a straightforward change that ensures we don't crash in a corner-case
  • String changes made/needed: none
  • Is Android affected?: no
Attachment #9488058 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: needinfo?(gsvelto)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: