Bug 1964406 - Prevent child processes from crashing if the crash helper wasn't launched r=afranchuk

Differential Revision: https://phabricator.services.mozilla.com/D249037